# input-representation-benchmark

./: .gitignore  LICENSE  PIPELINE.md  README.md  THIRD_PARTY_NOTICES.md  check_icu.py  environment.yml  extract_metrics.py  inspect_data.py  pyproject.toml  run_benchmark.sh  run_experiments.py  test_installation.py
artifacts/: README.md
configs/: experiment.yaml
deprecated/: README.md
docs/: layout.md  surface_inventory.md
figures/: README.md
methods/: data-columns.md  manuscript.md  overall-pipeline.mmd  paper.md  planned-strategies.md  proposal.md  quantization-ventile.md
outputs/: README.md
paper/: README.md
pipeline/: README.md  run_experiments.py
qc/: eval_maxlen_analysis.py  extreme_timelines.py  plot_length_histograms.py  token_stats.py
scripts/: INDEX.md  README.md  __init__.py  align_cohorts.py  analyze_meds_notation_ambiguity.py  append_readme.py  build_canonical_artifact_tree.py  build_clif_from_physionet.py  build_exp3_meds_semantics_arms.py  build_exp3_semantic_control_arms.py  build_run_artifact_tree.py  cleanup_artifacts.sh  compute_prevalence.py  create_exp1_best_model_aliases.py  create_xval_rep_mechanics.py  download_literature.py  extract_extended_outcomes.py  extract_outcomes_meds.py  generate_calibration_plot.py  generate_mlhc_appendix_tables.py  generate_mlhc_paper_figures.py  generate_radar_plot.py  minimal_e2e_dryrun.py  normalize_meds_tokenized_layout.py  preflight_perf_knobs.py  regenerate_aligned_family_stats.py  setup_conda_env_input_rep.sh  setup_conda_env_meds_extract.sh  smoke_test_exp2.py  split_clif_by_patient_splits.py  split_meds_by_hadm_splits.py  (+6 more)
(+389 files in other folders)
