[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "input-representation-benchmark"
version = "0.1.0"
description = "EHR Input Representation Strategy Benchmarking Framework"
readme = "README.md"
authors = [
    { name = "Daniel Lee", email = "ihlee@uchicago.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "numpy",
    "polars >= 1.26.0, <= 1.27.9",
]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]


